--- a/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
+++ b/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="IFTTTHttpTriggerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DateTimeParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
