Autfacをインストールした

--- a/KokeiroLifeLogger/KokeiroLifeLogger.csproj
+++ b/KokeiroLifeLogger/KokeiroLifeLogger.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.9.10" />
+    <PackageReference Include="AzureFunctions.Autofac" Version="3.0.5" />
     <PackageReference Include="Google.Apis.Analytics.v3" Version="1.35.2.1268" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="2.2.0" />
