--- a/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
+++ b/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
@@ -145,9 +145,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KokeiroLifeLogger\KokeiroLifeLogger.csproj">
+    <ProjectReference Include="..\KokeiroLifeLogger2\KokeiroLifeLogger2.csproj">
       <Project>{5c56d05a-41ad-4f0e-b533-e49390626f92}</Project>
-      <Name>KokeiroLifeLogger</Name>
+      <Name>KokeiroLifeLogger2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
