--- a/KokeiroLifeLogger/KokeiroLifeLogger.csproj
+++ b/KokeiroLifeLogger/KokeiroLifeLogger.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.9.10" />
+    <PackageReference Include="AzureFunctions.Autofac" Version="3.0.5" />
     <PackageReference Include="Ensure.That" Version="8.0.0" />
     <PackageReference Include="Google.Apis.Analytics.v3" Version="1.36.0.1268" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.21" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
