WithingsSleepとの連携機能を追加した

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,5 @@ paket-files/
 __pycache__/
 *.pyc
 KokeiroLifeLogger/Properties/PublishProfiles/
+
+KokeiroLifeLogger\.Test/appsettings\.test\.json
