--- a/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
+++ b/KokeiroLifeLogger.Test/KokeiroLifeLogger.Test.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\KokeiroLifeLogger\KokeiroLifeLogger.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
