Slackのdiaryチャンネルのメッセージを日記に含めるようにした

--- a/KokeiroLifeLogger/local.settings.json.template
+++ b/KokeiroLifeLogger/local.settings.json.template
@@ -10,6 +10,8 @@
 
     "MixiPostMail": "",
     "MixiPostMailPassword": "",
-    "MixiPostMailTo": ""
+    "MixiPostMailTo": "",
+
+    "SlackDiaryOAuthAccessToken": ""
   }
 }
