--- a/KokeiroLifeLogger/KokeiroLifeLogger.csproj
+++ b/KokeiroLifeLogger/KokeiroLifeLogger.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Google.Apis.Analytics.v3" Version="1.36.0.1268" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.21" />
+    <PackageReference Include="SlackAPI" Version="1.0.7" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
   <ItemGroup>
