add my tweet service

--- a/KokeiroLifeLogger/local.settings.json.template
+++ b/KokeiroLifeLogger/local.settings.json.template
@@ -12,6 +12,9 @@
     "MixiPostMailPassword": "",
     "MixiPostMailTo": "",
 
-    "SlackDiaryOAuthAccessToken": ""
+    "SlackDiaryOAuthAccessToken": "",
+
+    "TrelloAppKey": "",
+    "TrelloUserToken": ""
   }
 }
